[updates] update nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
         location / {
-            proxy_pass http://frontend:3000/;
+            proxy_pass http://cats-app:3000/;
         }
 
         location /.well-known/acme-challenge/ {
