--- a/nginx.conf
+++ b/nginx.conf
@@ -10,18 +10,28 @@ http {
     server {
         listen 443 ssl;
 
-        server_name vlad-dev.ru www.vlad-dev.ru;
+        server_name vlad-dev.ru;
 
+        ssl_prefer_server_ciphers on;
+        ssl_protocols TLSv1.1 TLSv1.2;
         ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
-        location / {
-            proxy_pass http://cats-app:3000/;
-        }
+        add_header Strict-Transport-Security "max-age=31536000";
+        add_header Content-Security-Policy "img-src https: data:; upgrade-insecure-requests";
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
+
+        location / {
+            return 302 https://$host$request_uri/cats;
+        {
+
+        location /cats {
+            proxy_pass http://cats-app:3000/;
+        }
+
 
         error_log /var/log/nginx/project_error.log;
         access_log /var/log/nginx/project_access.log;
@@ -29,12 +39,13 @@ http {
 
     server {
         listen 80;
+        server_name vlad-dev.ru;
 
-        server_name vlad-dev.ru www.vlad-dev.ru;
-
-        location / {
-        	return 301 https://vlad-dev.ru$request_uri;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            allow all;
         }
-    }
 
+        return 301 https://$host$request_uri;
+    }
 }
