[updates] fix docker-compose.yaml

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
         }
 
         location / {
-            return 302 https://$host$request_uri/cats;
+            return 302 https://$server_name/cats;
         }
 
         location /cats {
