[updates] fix docker-compose.yaml

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-user root;
+user nginx;
 
 worker_processes auto;
 
@@ -24,8 +24,8 @@ http {
             root /var/www/certbot;
         }
 
-        location / {
-            return 302 https://$server_name/cats;
+        location = / {
+            return 302 /cats;
         }
 
         location /cats {
