--- a/nginx.conf
+++ b/nginx.conf
@@ -24,8 +24,14 @@ http {
             root /var/www/certbot;
         }
 
-        location / {
-            proxy_pass http://cats-app:3000;
+        location = / {
+            return 302 /cats/;
+        }
+
+        location /cats/ {
+            proxy_pass http://cats-app:3000/cats/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         error_log /var/log/nginx/project_error.log;
