[updates] update nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,11 +25,11 @@ http {
         }
 
         location = / {
-            return 302 /cats/;
+            return 302 /cats;
         }
 
-        location /cats/ {
-            proxy_pass http://cats-app:3000/cats/;
+        location /cats {
+            proxy_pass http://cats-app:3000/cats;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
