--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
   cats-app:
     build:
       context: ../cats/app
+    environment:
+      APP_PATH: /cats
     container_name: cats-app
     networks:
       - vlad-network
