--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
         }
 
         location /cats {
-            proxy_pass http://cats-app;
+            proxy_pass http://cats-app/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
