[updates] fix nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,14 +24,8 @@ http {
             root /var/www/certbot;
         }
 
-        location = / {
-            return 302 /cats;
-        }
-
-        location /cats {
-            proxy_pass http://cats-app/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+        location / {
+            proxy_pass http://cats-app:3000;
         }
 
         error_log /var/log/nginx/project_error.log;
