[updates] fix nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,10 @@ http {
         }
 
         location / {
+            return 302 /cats/;
+        }
+
+        location /cats/ {
             proxy_pass http://cats-app:3000;
         }
 
