[updates] fix nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,10 +25,10 @@ http {
         }
 
         location / {
-            return 302 /cats/;
+            return 302 /cats;
         }
 
-        location /cats/ {
+        location /cats {
             proxy_pass http://cats-app:3000;
         }
 
