--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
         }
 
         location / {
-            return 302 /cats;
+            proxy_pass http://home:3000;
         }
 
         location /cats {
