[updates] update nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,7 @@ http {
         }
 
         location /cats {
+            rewrite ^/cats/(.*)$ /$1 break;
             proxy_pass http://cats-app:3000;
         }
 
