[updates] update nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,10 +26,12 @@ http {
 
         location / {
             proxy_pass http://home:3000;
+            proxy_set_header Host $host;
         }
 
         location /cats {
             proxy_pass http://cats-app:3000;
+            proxy_set_header Host $host;
         }
 
         error_log /var/log/nginx/project_error.log;
