--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,7 @@ http {
         location /cats {
             proxy_pass http://cats-app:3000;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         error_log /var/log/nginx/project_error.log;
