--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
             proxy_set_header Host $host;
         }
 
-        location /cats {
+        location /cats/ {
             proxy_pass http://cats-app:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
