--- a/nginx.conf
+++ b/nginx.conf
@@ -26,13 +26,10 @@ http {
 
         location / {
             proxy_pass http://home:3000;
-            proxy_set_header Host $host;
         }
 
-        location /cats/ {
+        location /cats {
             proxy_pass http://cats-app:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
 
         error_log /var/log/nginx/project_error.log;
