--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
         }
 
         location / {
-            proxy_pass http://home:3000;
+            proxy_pass http://home:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -34,7 +34,7 @@ http {
         }
 
         location /cats {
-            proxy_pass http://cats-app:3000;
+            proxy_pass http://cats-app:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
