--- a/nginx.conf
+++ b/nginx.conf
@@ -26,19 +26,10 @@ http {
 
         location / {
             proxy_pass http://home:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
         }
 
-        location /cats {
+        location /cats/ {
             proxy_pass http://cats-app:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         error_log /var/log/nginx/project_error.log;
