--- a/home/nginx.conf
+++ b/home/nginx.conf
@@ -1,12 +1,11 @@
 server {
-
     listen 3000;
     gzip on;
 
+    root /usr/share/nginx/html;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ =404;
     }
 
     include /etc/nginx/extra-conf.d/*.conf;
