--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
         }
 
         location /cats/ {
-            proxy_pass http://cats-app:3000/cats/;
+            proxy_pass http://cats-app:3000/;
         }
 
         error_log /var/log/nginx/project_error.log;
