--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - './nginx.conf:/etc/nginx/nginx.conf'
       - '/etc/letsencrypt:/etc/letsencrypt'
     container_name: nginx-core
+    environment:
+      CATS_APP_BASE_PATH: ${CATS_APP_BASE_PATH:-/cats}
     depends_on:
       - home
       - cats-app
@@ -28,5 +30,7 @@ services:
     build:
       context: ../cats/app
     container_name: cats-app
+    environment:
+      BASE_PATH: ${CATS_APP_BASE_PATH:-/cats}
     networks:
       - vlad-network
