--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - '/etc/letsencrypt:/etc/letsencrypt'
     container_name: nginx-core
     environment:
-      CATS_APP_BASE_PATH: ${CATS_APP_BASE_PATH:-/cats}
+      CATS_APP_BASE_PATH: ${CATS_APP_BASE_PATH:-/cats/}
     depends_on:
       - home
       - cats-app
@@ -31,6 +31,6 @@ services:
       context: ../cats/app
     container_name: cats-app
     environment:
-      BASE_PATH: ${CATS_APP_BASE_PATH:-/cats}
+      BASE_PATH: ${CATS_APP_BASE_PATH:-/cats/}
     networks:
       - vlad-network
