--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - './nginx.conf:/etc/nginx/nginx.conf.template'
       - '/etc/letsencrypt:/etc/letsencrypt'
     container_name: nginx-core
+    command:
+      - 'envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf'
     environment:
       CATS_APP_BASE_PATH: ${CATS_APP_BASE_PATH:-/cats}
     depends_on:
