--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
             proxy_pass http://home:3000/;
         }
 
-        location ${CATS_APP_BASE_PATH} {
+        location /cats {
             proxy_pass http://cats-app:3000/;
         }
 
