--- a/home/nginx.conf
+++ b/home/nginx.conf
@@ -1,10 +1,22 @@
-server {
-    listen 3000;
-    gzip on;
+worker_processes 4;
 
-    root /usr/share/nginx/html;
+events {
+    worker_connections 1024;
+    use epoll;
+    multi_accept on;
+    accept_mutex off;
+}
 
-    location / {
-        try_files $uri $uri/ =404;
+http {
+    server {
+        listen 3000;
+        gzip on;
+
+        root /usr/share/nginx/html;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
     }
 }
+
