--- a/home/nginx.conf
+++ b/home/nginx.conf
@@ -1,22 +1,17 @@
-worker_processes 4;
+server {
+    listen 3000;
 
-events {
-    worker_connections 1024;
-    use epoll;
-    multi_accept on;
-    accept_mutex off;
-}
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-http {
-    server {
-        listen 3000;
-        gzip on;
+    gzip on;
 
-        root /usr/share/nginx/html;
+    root /usr/share/nginx/html;
 
-        location / {
-            try_files $uri $uri/ =404;
-        }
+    location / {
+        return 301 https://$host$request_uri/cats;
     }
 }
 
