--- a/home/nginx.conf
+++ b/home/nginx.conf
@@ -1,17 +1,16 @@
 server {
     listen 3000;
+    gzip on;
 
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    gzip on;
-
     root /usr/share/nginx/html;
 
     location / {
-        return 301 https://$host$request_uri/cats;
+        try_files $uri $uri/ =404;
     }
 }
 
