--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,9 @@ http {
 
         server_name vlad-dev.ru;
 
+        gzip on;
+        gzip_static  on;
+
         ssl_prefer_server_ciphers on;
         ssl_protocols TLSv1.1 TLSv1.2;
         ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
