--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,16 @@ http {
         listen 443 ssl;
         server_name vlad-dev.ru;
 
+        gzip on;
+        gzip_types
+                text/plain
+                text/css
+                text/xml
+                text/javascript
+                application/json
+                application/javascript
+                image/svg+xml;
+
         ssl_prefer_server_ciphers on;
         ssl_protocols TLSv1.1 TLSv1.2;
         ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
@@ -21,6 +31,10 @@ http {
 
         add_header Strict-Transport-Security "max-age=31536000";
         add_header Content-Security-Policy "img-src https: data:; upgrade-insecure-requests";
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
