--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ http {
         server_name vlad-dev.ru;
 
         gzip on;
+        gzip_comp_level 9;
         gzip_types
                 text/plain
                 text/css
