--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,12 @@ http {
             root /var/www/certbot;
         }
 
+        location ~ \.(woff2|woff|ttf|otf)$ {
+            expires 1y;
+            add_header Cache-Control "public";
+            etag on;
+        }
+
         location / {
             proxy_pass http://home:3000/;
         }
