--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
             root /var/www/certbot;
         }
 
-        location ~ \.(woff2|woff|ttf|otf)$ {
+        location ~ \.(|woff2|woff|ttf|otf)$ {
             expires 1y;
             add_header Cache-Control "public";
             etag on;
