--- a/nginx.conf
+++ b/nginx.conf
@@ -37,16 +37,18 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
         location / {
             proxy_pass http://home:3000/;
         }
 
         location /cats {
             proxy_pass http://cats-app:3000/;
+
+            location ~ \.(woff2|woff|ttf|otf)$ {
+                expires 1y;
+                add_header Cache-Control "public";
+                etag on;
+            }
         }
 
         error_log /var/log/nginx/project_error.log;
@@ -59,7 +61,6 @@ http {
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
-            allow all;
         }
 
         return 301 https://$host$request_uri;
