--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,19 @@ events {
 
 http {
     server {
+        # default port for frontend app
+        set $default_frontend_port 3000;
+
+        # home page settings
+        set $home_path /;
+        set $home_host home;
+        set $home_port $default_frontend_port;
+
+        # cats page settings
+        set $cats_path /cats;
+        set $cats_host сats;
+        set $cats_port $default_frontend_port;
+
         listen 443 ssl;
         server_name vlad-dev.ru;
 
@@ -37,18 +50,12 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        location / {
-            proxy_pass http://home:3000/;
+        location $home_path {
+            proxy_pass http://$home_host:$home_port/;
         }
 
-        location /cats {
-            proxy_pass http://cats-app:3000/;
-
-            location ~ \.(woff2|woff|ttf|otf)$ {
-                expires 1y;
-                add_header Cache-Control "public";
-                etag on;
-            }
+        location $cats_path {
+            proxy_pass http://$cats_host:$cats_port/;
         }
 
         error_log /var/log/nginx/project_error.log;
