--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ events {
 http {
     server {
         listen 443 ssl;
-        server_name vlad-dev.ru;
+        server_name vlad-dev.ru www.vlad-dev.ru;
 
         gzip on;
         gzip_comp_level 9;
