--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,7 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         location / {
+            limit_req zone=one burst=5;
             proxy_pass http://home:3000/;
         }
 
