--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,8 @@ events {
 }
 
 http {
+    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+
     server {
         listen 443 ssl;
         server_name vlad-dev.ru www.vlad-dev.ru;
