--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ events {
 }
 
 http {
-    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
 
     server {
         listen 443 ssl;
@@ -38,6 +38,8 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        limit_req zone=one burst=5;
 
         location / {
             proxy_pass http://home:3000/;
