--- a/nginx.conf
+++ b/nginx.conf
@@ -40,6 +40,8 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         limit_req zone=one burst=5;
+        limit_conn one 5;
+        limit_conn_status 429;
 
         location / {
             proxy_pass http://home:3000/;
