--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,7 @@ http {
         limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
 
         listen 80;
-        server_name vlad-dev.ru;
+        server_name vlad-dev.ru www.vlad-dev.ru;
 
         limit_req zone=one burst=5;
         limit_conn one 5;
