--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,7 @@ events {
 
 http {
     limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
+    limit_conn_zone  $binary_remote_addr zone=notabot:5m;
 
     server {
         listen 443 ssl;
@@ -56,7 +57,7 @@ http {
         server_name vlad-dev.ru www.vlad-dev.ru;
 
         limit_req zone=one burst=5;
-        limit_conn one 5;
+        limit_conn notabot 5;
         limit_conn_status 429;
 
         location /.well-known/acme-challenge/ {
