--- a/nginx.conf
+++ b/nginx.conf
@@ -1,37 +1,67 @@
 user nginx;
 
 worker_processes auto;
+worker_cpu_affinity auto;
+worker_rlimit_nofile 30000;
+
+pcre_jit on;
 
 events {
     worker_connections 1024;
-    use epoll;
-    multi_accept on;
-    accept_mutex off;
 }
 
 http {
-    limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
-    limit_conn_zone  $binary_remote_addr zone=notabot:5m;
+    limit_req_zone $binary_remote_addr$host zone=low:10m rate=3r/s;
+    limit_req_zone $binary_remote_addr$host zone=speed:10m rate=20r/s;
+    limit_conn_zone $binary_remote_addr$host zone=notabot:10m;
+
+    keepalive_timeout 300;
+    keepalive_requests 10000;
+    send_timeout 1200;
+    client_body_timeout 30;
+    client_header_timeout 30;
+    types_hash_max_size 2048;
+    server_names_hash_max_size 4096;
+
+    proxy_connect_timeout 10m;
+    proxy_send_timeout 10;
+    proxy_read_timeout 10;
+    proxy_temp_file_write_size 64k;
+    proxy_temp_path /var/nginx/client_body_temp;
+    proxy_buffer_size 4k;
+    proxy_buffers 32 16k;
+    proxy_busy_buffers_size 32k;
+
+    gzip on;
+    gzip_static on;
+    gzip_comp_level 6;
+    gzip_types
+            text/plain
+            text/css
+            text/xml
+            text/javascript
+            application/json
+            application/javascript
+            image/svg+xml;
+
+    ssl_prefer_server_ciphers on;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_buffer_size 16k;
+    ssl_session_timeout 24h;
+    ssl_session_tickets on;
+    ssl_early_data on;
+    ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
+
+    http2_chunk_size 8k;
+    http2_idle_timeout 5m;
+
+    error_log /var/log/nginx/project_error.log;
+    access_log /var/log/nginx/project_access.log;
 
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name vlad-dev.ru www.vlad-dev.ru;
-
-        gzip on;
-        gzip_comp_level 9;
-        gzip_types
-                text/plain
-                text/css
-                text/xml
-                text/javascript
-                application/json
-                application/javascript
-                image/svg+xml;
-
-        ssl_prefer_server_ciphers on;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
         add_header Strict-Transport-Security "max-age=31536000";
         add_header Content-Security-Policy "img-src https: data:; upgrade-insecure-requests";
@@ -47,23 +77,24 @@ http {
         location /cats {
             proxy_pass http://cats-app:3000/;
         }
-
-        error_log /var/log/nginx/project_error.log;
-        access_log /var/log/nginx/project_access.log;
     }
 
     server {
         listen 80;
         server_name vlad-dev.ru www.vlad-dev.ru;
 
-        limit_req zone=one burst=5;
-        limit_conn notabot 5;
-        limit_conn_status 429;
+        charset utf-8;
+
+        location / {
+            limit_req zone=low burst=5 nodelay;
+            limit_conn notabot 5;
+            limit_conn_status 429;
+
+            return 301 https://$host$request_uri;
+        }
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
-
-        return 301 https://$host$request_uri;
     }
 }
