--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,6 @@ http {
     proxy_send_timeout 10;
     proxy_read_timeout 10;
     proxy_temp_file_write_size 64k;
-    proxy_temp_path /var/nginx/client_body_temp;
     proxy_buffer_size 4k;
     proxy_buffers 32 16k;
     proxy_busy_buffers_size 32k;
@@ -60,7 +59,9 @@ http {
     access_log /var/log/nginx/project_access.log;
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
+
         server_name vlad-dev.ru www.vlad-dev.ru;
 
         add_header Strict-Transport-Security "max-age=31536000";
