--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,10 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
+        limit_req zone=low burst=5 nodelay;
+        limit_conn notabot 5;
+        limit_conn_status 429;
+
         location / {
             proxy_pass http://home:3000/;
         }
