--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,7 @@ http {
         limit_req zone=low burst=5 nodelay;
         limit_conn notabot 5;
         limit_conn_status 429;
+        limit_req_status 429;
 
         location / {
             proxy_pass http://home:3000/;
@@ -71,16 +72,15 @@ http {
 
         charset utf-8;
 
-        location / {
-            limit_req zone=low burst=5 nodelay;
-            limit_conn notabot 5;
-            limit_conn_status 429;
-
-            return 301 https://$host$request_uri;
-        }
+        limit_req zone=low burst=5 nodelay;
+        limit_conn notabot 5;
+        limit_conn_status 429;
+        limit_req_status 429;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
+
+        return 301 https://$host$request_uri;
     }
 }
