--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,19 @@ http {
     ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
+    log_format attack_detection '$remote_addr - $remote_user [$time_local] '
+                                    '"$request" $status $body_bytes_sent '
+                                    '"$http_referer" "$http_user_agent" '
+                                    'rt=$request_time uct="$upstream_connect_time" '
+                                    'uht="$upstream_header_time" urt="$upstream_response_time" '
+                                    'request_body="$request_body" '
+                                    'http_x_forwarded_for="$http_x_forwarded_for" '
+                                    'server_name="$server_name" '
+                                    'connection=$connection '
+                                    'connection_requests=$connection_requests';
+
     error_log /var/log/nginx/project_error.log;
-    access_log /var/log/nginx/project_access.log;
+    access_log attack_detection /var/log/nginx/project_access.log;
 
     server {
         listen 443 ssl;
