--- a/nginx.conf
+++ b/nginx.conf
@@ -36,16 +36,16 @@ http {
     ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
-    log_format attack_detection '$remote_addr - $remote_user [$time_local] '
-                                    '"$request" $status $body_bytes_sent '
-                                    '"$http_referer" "$http_user_agent" '
-                                    'rt=$request_time uct="$upstream_connect_time" '
-                                    'uht="$upstream_header_time" urt="$upstream_response_time" '
-                                    'request_body="$request_body" '
-                                    'http_x_forwarded_for="$http_x_forwarded_for" '
-                                    'server_name="$server_name" '
-                                    'connection=$connection '
-                                    'connection_requests=$connection_requests';
+    log_format attacker_hunt '$remote_addr|$http_x_forwarded_for|[$time_local]|'
+                                 'METHOD=$request_method|URL="$request_uri"|'
+                                 'STATUS=$status|BYTES=$body_bytes_sent|'
+                                 'REFERER="$http_referer"|'
+                                 'UA="$http_user_agent"|'
+                                 'RT=$request_time|UCT=$upstream_connect_time|'
+                                 'UHT=$upstream_header_time|URT=$upstream_response_time|'
+                                 'SERVER="$server_name"|'
+                                 'CONNECTION=$connection|REQS=$connection_requests|'
+                                 'POST_DATA="$request_body"';
 
     error_log /var/log/nginx/project_error.log;
     access_log attack_detection /var/log/nginx/project_access.log;
