--- a/nginx.conf
+++ b/nginx.conf
@@ -36,19 +36,12 @@ http {
     ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
-    log_format attacker_hunt '$remote_addr|$http_x_forwarded_for|[$time_local]|'
-                                 'METHOD=$request_method|URL="$request_uri"|'
-                                 'STATUS=$status|BYTES=$body_bytes_sent|'
-                                 'REFERER="$http_referer"|'
-                                 'UA="$http_user_agent"|'
-                                 'RT=$request_time|UCT=$upstream_connect_time|'
-                                 'UHT=$upstream_header_time|URT=$upstream_response_time|'
-                                 'SERVER="$server_name"|'
-                                 'CONNECTION=$connection|REQS=$connection_requests|'
-                                 'POST_DATA="$request_body"';
+    log_format combined '$remote_addr - $remote_user [$time_local] '
+                        '"$request" $status $body_bytes_sent '
+                        '"$http_referer" "$http_user_agent"';
 
     error_log /var/log/nginx/project_error.log;
-    access_log attack_detection /var/log/nginx/project_access.log;
+    access_log combined /var/log/nginx/project_access.log;
 
     server {
         listen 443 ssl;
