--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
                         '"$http_referer" "$http_user_agent"';
 
     error_log /var/log/nginx/project_error.log;
-    access_log combined /var/log/nginx/project_access.log;
+    access_log /var/log/nginx/project_access.log;
 
     server {
         listen 443 ssl;
