--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,13 @@
 user nginx;
 
-worker_processes 1;
-worker_cpu_affinity 1;
+worker_processes auto;
+worker_cpu_affinity auto;
 worker_rlimit_nofile 30000;
 
 pcre_jit on;
 
 events {
-    worker_connections 10;
+    worker_connections 1024;
 }
 
 http {
