--- a/nginx.conf
+++ b/nginx.conf
@@ -15,27 +15,6 @@ http {
     limit_req_zone $binary_remote_addr$host zone=speed:10m rate=20r/s;
     limit_conn_zone $binary_remote_addr$host zone=notabot:10m;
 
-    gzip on;
-    gzip_static on;
-    gzip_comp_level 6;
-    gzip_types
-            text/plain
-            text/css
-            text/xml
-            text/javascript
-            application/json
-            application/javascript
-            image/svg+xml;
-
-    ssl_prefer_server_ciphers on;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_buffer_size 16k;
-    ssl_session_timeout 24h;
-    ssl_session_tickets on;
-    ssl_early_data on;
-    ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
-
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 
@@ -45,17 +24,21 @@ http {
 
         server_name vlad-dev.ru www.vlad-dev.ru;
 
-        add_header Strict-Transport-Security "max-age=31536000";
-        add_header Content-Security-Policy "img-src https: data:; upgrade-insecure-requests";
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        set $gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
         limit_req zone=low burst=5 nodelay;
         limit_conn notabot 5;
         limit_conn_status 429;
         limit_req_status 429;
+
+        gzip on;
+        gzip_static on;
+        gzip_comp_level 6;
+        gzip_types $gzip_types;
 
         location / {
             proxy_pass http://home:3000/;
@@ -69,8 +52,6 @@ http {
     server {
         listen 80;
         server_name vlad-dev.ru www.vlad-dev.ru;
-
-        charset utf-8;
 
         limit_req zone=low burst=5 nodelay;
         limit_conn notabot 5;
