--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,8 @@ worker_cpu_affinity auto;
 pcre_jit on;
 
 events {
-    worker_connections 1024;
+    worker_connections 64;
+    accept_mutex on;
 }
 
 http {
