--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,6 @@ http {
 
         server_name vlad-dev.ru www.vlad-dev.ru;
 
-        set $gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
-
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
@@ -36,7 +34,7 @@ http {
         gzip on;
         gzip_static on;
         gzip_comp_level 6;
-        gzip_types $gzip_types;
+        gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
 
         location / {
             proxy_pass http://home:3000/;
