--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,10 @@ http {
         gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
 
         location / {
+            limit_except POST, PUT, DELETE, MKCOL, COPY, MOVE, OPTIONS, PROPFIND, PROPPATCH, LOCK, UNLOCK, PATCH {
+                deny all;
+            }
+
             proxy_pass http://home:3000/;
         }
 
