--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
         gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
 
         location / {
-            limit_except POST, PUT, DELETE, MKCOL, COPY, MOVE, OPTIONS, PROPFIND, PROPPATCH, LOCK, UNLOCK, PATCH {
+            limit_except POST PUT DELETE MKCOL COPY MOVE OPTIONS PROPFIND PROPPATCH LOCK UNLOCK PATCH {
                 deny all;
             }
 
