--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,11 @@ events {
 }
 
 http {
+    geo $block_country {
+        default 0;
+        RU 1;   # Россия
+    }
+
     limit_req_zone $binary_remote_addr$host zone=low:10m rate=3r/s;
     limit_req_zone $binary_remote_addr$host zone=speed:10m rate=20r/s;
     limit_conn_zone $binary_remote_addr$host zone=notabot:10m;
@@ -36,6 +41,10 @@ http {
         gzip_comp_level 6;
         gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
 
+        if ($block_country = 0) {
+            return 444;
+        }
+
         location / {
             limit_except GET {
                 deny all;
@@ -57,6 +66,10 @@ http {
         limit_conn notabot 5;
         limit_conn_status 429;
         limit_req_status 429;
+
+        if ($block_country = 0) {
+            return 444;
+        }
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
