--- a/nginx.conf
+++ b/nginx.conf
@@ -9,11 +9,6 @@ events {
 }
 
 http {
-    geo $block_country {
-        default 0;
-        RU 1;   # Россия
-    }
-
     limit_req_zone $binary_remote_addr$host zone=low:10m rate=3r/s;
     limit_req_zone $binary_remote_addr$host zone=speed:10m rate=20r/s;
     limit_conn_zone $binary_remote_addr$host zone=notabot:10m;
@@ -32,18 +27,17 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
         limit_req zone=low burst=5 nodelay;
+        limit_req_status 429;
+        limit_req_log_level warn;
+
         limit_conn notabot 5;
         limit_conn_status 429;
-        limit_req_status 429;
+        limit_conn_log_level warn;
 
         gzip on;
         gzip_static on;
         gzip_comp_level 6;
         gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
-
-        if ($block_country = 0) {
-            return 444;
-        }
 
         location / {
             limit_except GET {
