--- a/nginx.conf
+++ b/nginx.conf
@@ -4,14 +4,15 @@ worker_cpu_affinity auto;
 pcre_jit on;
 
 events {
-    worker_connections 64;
+    worker_connections 1024;
+    use epoll;
+    multi_accept on;
     accept_mutex on;
 }
 
 http {
-    limit_req_zone $binary_remote_addr$host zone=low:10m rate=3r/s;
-    limit_req_zone $binary_remote_addr$host zone=speed:10m rate=20r/s;
-    limit_conn_zone $binary_remote_addr$host zone=notabot:10m;
+    limit_req_zone $binary_remote_addr$host zone=low_req:5m rate=3r/s;
+    limit_conn_zone $binary_remote_addr$host zone=low_conn:5m rate=3r/s;
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
@@ -26,11 +27,11 @@ http {
         ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
 
-        limit_req zone=low burst=5 nodelay;
+        limit_req zone=low_req burst=5 nodelay;
         limit_req_status 429;
         limit_req_log_level warn;
 
-        limit_conn notabot 5;
+        limit_conn low_conn 5;
         limit_conn_status 429;
         limit_conn_log_level warn;
 
@@ -56,10 +57,13 @@ http {
         listen 80;
         server_name vlad-dev.ru www.vlad-dev.ru;
 
-        limit_req zone=low burst=5 nodelay;
-        limit_conn notabot 5;
-        limit_conn_status 429;
+        limit_req zone=low_req burst=5 nodelay;
         limit_req_status 429;
+        limit_req_log_level warn;
+
+        limit_conn low_conn 5;
+        limit_conn_status 429;
+        limit_conn_log_level warn;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
