--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ events {
 
 http {
     limit_req_zone $binary_remote_addr$host zone=low_req:5m rate=3r/s;
-    limit_conn_zone $binary_remote_addr$host zone=low_conn:5m rate=3r/s;
+    limit_conn_zone $binary_remote_addr$host zone=low_conn:5m;
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
