--- a/nginx.conf
+++ b/nginx.conf
@@ -17,53 +17,52 @@ http {
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
+
+    limit_req zone=low_req burst=5 nodelay;
+    limit_req_status 429;
+    limit_req_log_level warn;
+
+    limit_conn low_conn 5;
+    limit_conn_status 429;
+    limit_conn_log_level warn;
+
+    gzip on;
+    gzip_static on;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
+
+    http2 on;
+
     server {
         listen 443 ssl;
-        http2 on;
-
         server_name vlad-dev.ru www.vlad-dev.ru;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
-
-        limit_req zone=low_req burst=5 nodelay;
-        limit_req_status 429;
-        limit_req_log_level warn;
-
-        limit_conn low_conn 5;
-        limit_conn_status 429;
-        limit_conn_log_level warn;
-
-        gzip on;
-        gzip_static on;
-        gzip_comp_level 6;
-        gzip_types text/plain text/css text/xml text/javascript application/json application/javascript image/svg+xml;
 
         location / {
             limit_except GET {
                 deny all;
             }
-
             proxy_pass http://home:3000/;
         }
+    }
 
-        location /cats {
+    server {
+        listen 443 ssl;
+        server_name cats.vlad-dev.ru;
+
+        location / {
+            limit_except GET {
+                deny all;
+            }
             proxy_pass http://cats-app:3000/;
         }
     }
 
     server {
         listen 80;
-        server_name vlad-dev.ru www.vlad-dev.ru;
-
-        limit_req zone=low_req burst=5 nodelay;
-        limit_req_status 429;
-        limit_req_log_level warn;
-
-        limit_conn low_conn 5;
-        limit_conn_status 429;
-        limit_conn_log_level warn;
+        server_name vlad-dev.ru www.vlad-dev.ru cats.vlad-dev.ru;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
