--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ http {
     access_log /var/log/nginx/project_access.log;
 
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_certificate /etc/letsencrypt/live/vlad-dev.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/vlad-dev.ru-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vlad-dev.ru-0001/privkey.pem;
 
     limit_req zone=low_req burst=5 nodelay;
     limit_req_status 429;
