--- a/nginx.conf
+++ b/nginx.conf
@@ -62,7 +62,7 @@ http {
 
     server {
         listen 80;
-        server_name vlad-dev.ru www.vlad-dev.ru cats.vlad-dev.ru;
+        server_name vlad-dev.ru www.vlad-dev.ru *.vlad-dev.ru;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
