--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,8 @@ http {
 
     http2 on;
 
+    add_header X-Frame-Options "SAMEORIGIN" always;
+
     server {
         listen 443 ssl;
         server_name vlad-dev.ru www.vlad-dev.ru;
