--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,7 @@ http {
     http2 on;
 
     add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header Strict-Transport-Security "max-age=31536000";
 
     server {
         listen 443 ssl;
