--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,10 @@ http {
 
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header Strict-Transport-Security "max-age=31536000";
+    add_header Content-Security-Policy "img-src https: data:; upgrade-insecure-requests";
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
     server {
         listen 443 ssl;
