--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ networks:
 
 services:
   nginx-core:
-    image: nginx:latest
+    image: nginx:stable-alpine-slim
     ports:
       - "80:80"
       - "443:443"
